add simple file upload + test stub
